effectloader.h
@@ -66,7 +66,7 @@ Q_DECLARE_FLAGS(LoadEffectFlags, LoadEffectFlag)
  * to be queried at the same time. Thus the idea is to have one implementation per type and one
  * implementation which makes use of all of them and combines the loading.
  */
-class AbstractEffectLoader : public QObject
+class KWIN_EXPORT AbstractEffectLoader : public QObject
 {
     Q_OBJECT
 public:
